Minor: fix custom bulk edit process input field alignment

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1407,7 +1407,7 @@ body.orbeon {
                 }
 
                 .fb-save-or-process {
-                    .xforms-items, .xforms-group, .xforms-input {
+                    .xforms-items, .xforms-group {
                         margin-left: 60px;
                         padding-left: 0;
                     }
@@ -1432,7 +1432,7 @@ body.orbeon {
                 }
 
                 .fb-direction {
-                    .xforms-items, .xforms-group, .xforms-input {
+                    .xforms-items, .xforms-group {
                         margin-left: 60px;
                         padding-left: 0;
                     }
